<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddEntreprise">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titremenu"
            android:textSize="28dp"
            android:textColor="@color/white"
            android:background="#068AEF"
            />

        <EditText
            style="@style/titre"
            android:id="@+id/t1"
            android:layout_marginTop="40dp"
            android:text="@string/text1"/>
        <EditText
            style="@style/titre"
            android:id="@+id/t2"
            android:layout_marginTop="40dp"
            android:text="@string/text2"/>
        <EditText
            style="@style/titre"
            android:id="@+id/t3"
            android:layout_marginTop="40dp"
            android:text="@string/text3"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="399dp"
        >
        <Button
            style="@style/btnActv"
            android:text="@string/btn1"
            android:id="@+id/b1"
            android:onClick="enregistre"/>
        <Button
            style="@style/btnActv"
            android:text="@string/btn2"
            android:id="@+id/b2"
            android:onClick="Annuler"
            />

              </LinearLayout>
</RelativeLayout>