<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titremenu"
        android:textSize="28dp"
        android:textColor="@color/white"
        android:background="#068AEF"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="240dp">
        <Button
            android:id="@+id/b1"
            style="@style/btnMenu"
            android:onClick="acces"
            android:text="@string/titremenu1" />

        <Button
            android:id="@+id/b2"
            style="@style/btnMenu"
            android:onClick="acces"
            android:text="@string/titremenu2" />

        <Button
            android:id="@+id/b3"
            style="@style/btnMenu"
            android:onClick="acces"
            android:text="@string/titremenu3" />
    </LinearLayout>

</LinearLayout>